# Projet_transversal_C_BD_aide

./: CMakeLists.txt  V1.c  V2.c  emprunt.c  emprunt.h  emprunts.c  emprunts.h  exemplaire.c  exemplaire.h  fichier.c  fichier.h  fichiers.c  fichiers.h  livre.c  livre.h  livres.c  main.c  raygui.c  raygui.h  raylib.c  raylib.h  structure.c  structure.h  structures.h  utilisateur.c  utilisateur.h  utilisateurs.c  utilisateurs.h  utils.c  utils.h
include/: emprunts.h  exemplaire.h  fichiers.h  livres.h  structures.h  utilisateur.h  utils.h
src/: emprunts.c  exemplaire.c  fichiers.c  livres.c  main.c  utilisateur.c  utilisateurs.c  utils.c
